# robotoc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  aligned__deque_8hpp.html  aligned__deque_8hpp.js  aligned__deque_8hpp__dep__incl.map  aligned__deque_8hpp__dep__incl.md5  aligned__deque_8hpp__incl.map  aligned__deque_8hpp__incl.md5  aligned__deque_8hpp_source.html  aligned__unordered__map_8hpp.html  aligned__unordered__map_8hpp.js  aligned__unordered__map_8hpp__dep__incl.map  aligned__unordered__map_8hpp__dep__incl.md5  aligned__unordered__map_8hpp__incl.map  aligned__unordered__map_8hpp__incl.md5  aligned__unordered__map_8hpp_source.html  aligned__vector_8hpp.html  aligned__vector_8hpp.js  aligned__vector_8hpp__dep__incl.map  aligned__vector_8hpp__dep__incl.md5  aligned__vector_8hpp__incl.map  aligned__vector_8hpp__incl.md5  aligned__vector_8hpp_source.html  annotated.html  annotated_dup.js  backward__riccati__recursion__factorizer_8hpp.html  backward__riccati__recursion__factorizer_8hpp.js  backward__riccati__recursion__factorizer_8hpp__dep__incl.map  backward__riccati__recursion__factorizer_8hpp__dep__incl.md5  backward__riccati__recursion__factorizer_8hpp__incl.map  backward__riccati__recursion__factorizer_8hpp__incl.md5  backward__riccati__recursion__factorizer_8hpp_source.html  biped__walk__foot__step__planner_8hpp.html  biped__walk__foot__step__planner_8hpp.js  biped__walk__foot__step__planner_8hpp__incl.map  biped__walk__foot__step__planner_8hpp__incl.md5  biped__walk__foot__step__planner_8hpp_source.html  (+1878 more)
bindings/python/: CMakeLists.txt  README.md
examples/anymal/: CMakeLists.txt  README.md  anymal_jumping.cpp  anymal_running.cpp  anymal_trotting.cpp  anymal_trotting_parnmpc.cpp  bounce.cpp  bounding.cpp  crawl.cpp  jump.cpp  jump_sto.cpp  jumping.cpp  jumping_sto.cpp  mpc_simulation.cpp  mpc_standing.cpp  mpc_trot.cpp  mpc_trotting.cpp  ocp_benchmark.cpp  ocp_trotting.cpp  pace.cpp  pacing.cpp  parnmpc_benchmark.cpp  periodic_com_ref.cpp  periodic_com_ref.hpp  periodic_foot_track_ref.cpp  periodic_foot_track_ref.hpp  run.cpp  running.cpp  trot.cpp  trotting.cpp  walking.cpp
examples/cranex7/: CMakeLists.txt  constraints.cpp  constraints.hpp  cost_function.cpp  cost_function.hpp  cranex7_task_space_3d_ocp.cpp  cranex7_task_space_3d_parnmpc.cpp  cranex7_task_space_6d_ocp.cpp  cranex7_task_space_6d_parnmpc.cpp  main.cpp  ocp_benchmark.cpp  ocp_test.cpp  sim_mpc.cpp
examples/iiwa14/: .ocp_benchmark.cpp.swp  CMakeLists.txt  config_space_ocp.cpp  constraints.cpp  constraints.hpp  cost_function.cpp  cost_function.hpp  main.cpp  mpc_simulation.cpp  ocp_benchmark.cpp  ocp_test.cpp  parnmpc_benchmark.cpp  sim_mpc.cpp  task_space_ocp.cpp  unconstr_ocp_benchmark.cpp  unconstr_parnmpc_benchmark.cpp  unocp_benchmark.cpp  unparnmpc_benchmark.cpp
test/: :w  CMakeLists.txt
test/cmake/: gtest.cmake
test/constraints/: CMakeLists.txt  collision_avoidance_surface_test.cpp  constraint_component_data_test.cpp  constraints_data_test.cpp  constraints_test.cpp  contact_distance_test.cpp  contact_normal_force_test.cpp  contact_wrench_cone_test.cpp  fixed_base_constraints_test.cpp  floating_base_constraints_test.cpp  friction_cone_test.cpp  impact_friction_cone_test.cpp  impact_wrench_cone_test.cpp  impulse_friction_cone_test.cpp  impulse_normal_force_test.cpp  impulse_wrench_cone_test.cpp  impulse_wrench_friction_cone_test.cpp  joint_acceleration_lower_limit_test.cpp  joint_acceleration_upper_limit_test.cpp  joint_position_lower_limit_test.cpp  joint_position_upper_limit_test.cpp  joint_space_constraints.hpp  joint_torques_lower_limit_test.cpp  joint_torques_upper_limit_test.cpp  joint_variables_lower_limits.hpp  joint_variables_upper_limits.hpp  joint_velocity_lower_limit_test.cpp  joint_velocity_upper_limit_test.cpp  linearized_friction_cone_test.cpp  linearized_impulse_friction_cone_test.cpp  pdipm_func_test.cpp  pdipm_test.cpp  pdipm_test_func.hpp  wrench_friction_cone_test.cpp
test/contact_complementarity/: CMakeLists.txt  contact_normal_force_test.cpp  distance_to_contact_surface_test.cpp  friction_cone_test.cpp
test/core/: CMakeLists.txt  split_direction_test.cpp  split_kkt_matrix_test.cpp  split_kkt_residual_test.cpp  split_solution_test.cpp
test/cost/: CMakeLists.txt  com_cost_test.cpp  configuration_space_cost_test.cpp  contact_force_cost_test.cpp  cost_function_test.cpp  discrete_time_periodic_com_ref_test.cpp  discrete_time_periodic_foot_track_ref_test.cpp  fixed_base_contact_cost_test.cpp  fixed_base_contact_force_cost_test.cpp  fixed_base_joint_space_cost_test.cpp  fixed_base_task_space_3d_cost_test.cpp  fixed_base_task_space_6d_cost_test.cpp  floating_base_contact_cost_test.cpp  floating_base_contact_force_cost_test.cpp  floating_base_joint_space_cost_test.cpp  floating_base_task_space_3d_cost_test.cpp  floating_base_task_space_6d_cost_test.cpp  impulse_force_cost_test.cpp  impulse_time_varying_configuration_cost_test.cpp  joint_space_cost_test.cpp  joint_space_impulse_cost_test.cpp  local_contact_force_cost_test.cpp  multi_mode_configuration_space_cost_test.cpp  multi_mode_task_space_3d_cost_test.cpp  multi_mode_task_space_6d_cost_test.cpp  periodic_com_ref2_test.cpp  periodic_com_ref_test.cpp  periodic_foot_track_ref2_test.cpp  periodic_foot_track_ref_test.cpp  periodic_swing_foot_ref_test.cpp  swing_foot_cost_test.cpp  task_space_3d_cost_test.cpp  task_space_6d_cost_test.cpp  time_varying_com_cost_test.cpp  time_varying_configuration_cost_test.cpp  time_varying_configuration_space_cost_test.cpp  time_varying_task_space_3d_cost_test.cpp  time_varying_task_space_6d_cost_test.cpp  trotting_foot_height_cost_test.cpp
test/dynamics/: CMakeLists.txt  contact_dynamics_data_test.cpp  contact_dynamics_test.cpp  impact_dynamics_test.cpp  impact_state_equation_test.cpp  impulse_dynamics_data_test.cpp  impulse_dynamics_test.cpp  impulse_state_equation_test.cpp  state_equation_test.cpp  switching_constraint_test.cpp  terminal_state_equation_test.cpp  unconstr_dynamics_test.cpp
test/hybrid/: CMakeLists.txt  collision_checker_test.cpp  contact_sequence_test.cpp  (+12 more)
(+2285 files in other folders)
